unpackaged/main/default/objects/OrderSummary/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <label>Number of Items</label>
    <summarizedField>OrderItemSummary.Quantity</summarizedField>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>