unpackaged/main/default/objects/OrderSummary/fields/Order_Product_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Summaries__c</fullName>
    <label>Order Product Summaries</label>
    <summarizedField>OrderItemSummary.Quantity</summarizedField>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>