unpackaged/main/default/objects/OrderSummary/fields/SDO_OMS_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>SDO_OMS_Display_Name__c</fullName>
    <formula>/* More Human-readable view of the order name, keyed on date */


IF( (TODAY() - DATEVALUE(CreatedDate) ) == 0,
/*If Today, say &quot;Today&quot; */
&quot;Ordered Today (#&quot; &amp; OrderNumber &amp; &quot;)&quot;,

IF( (TODAY() - DATEVALUE(CreatedDate) ) &lt; 6,
/*Else, if in the last week, say d/o week */
&quot;Ordered &quot; &amp;
CASE(WEEKDAY(DATEVALUE(CreatedDate)),
1,&quot;Sunday&quot;,
2,&quot;Monday&quot;,
3,&quot;Tuesday&quot;,
4,&quot;Wednesday&quot;,
5,&quot;Thursday&quot;,
6,&quot;Friday&quot;,
7,&quot;Saturday&quot;,
&quot;&quot;)&amp;
&quot; (#&quot; &amp; OrderNumber &amp; &quot;)&quot;,

/*Else, just show the date */
&quot;Ordered &quot; &amp;
CASE(MONTH(DATEVALUE(CreatedDate)),
1,&quot;January&quot;,
2,&quot;February&quot;,
3,&quot;March&quot;,
4,&quot;April&quot;,
5,&quot;May&quot;,
6,&quot;June&quot;,
7,&quot;July&quot;,
8,&quot;August&quot;,
9,&quot;September&quot;,
10,&quot;October&quot;,
11,&quot;November&quot;,
12,&quot;December&quot;,
&quot;&quot;)&amp; &quot; &quot; &amp;
TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;, &quot; &amp;
TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot; &quot; &amp;
&quot; (#&quot; &amp; OrderNumber &amp; &quot;)&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>