unpackaged/main/default/objects/OrderSummary/fields/Shipping_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tracking__c</fullName>
    <label>Shipping Tracking</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>