unpackaged/main/default/objects/OrderSummary/listViews/SDO_My_Order_Summaries.listView-meta.xml
<ListView>
    <fullName>SDO_My_Order_Summaries</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <filterScope>Mine</filterScope>
    <label>My Order Summaries</label>
</ListView>