unpackaged/main/default/objects/OrderSummary/listViews/SDO_OMS_OrderSummary_OpenOrders.listView-meta.xml
<ListView>
    <fullName>SDO_OMS_OrderSummary_OpenOrders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>Number_of_Items__c</columns>
    <columns>GrandTotalAmount</columns>
    <columns>SalesStore</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Fulfilled</value>
    </filters>
    <label>Open Orders</label>
</ListView>